k8s/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webgo-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 443
      name: http
      protocol: HTTP
    hosts:
    - webgo.pauloponciano.pro
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webgo
spec:
  hosts:
  - webgo.pauloponciano.pro
  gateways:
  - webgo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: webgo.webgo.svc.cluster.local
        port:
          number: 8080
